@@ -1,3 +1,7 @@
+2002-01-13	Fixes <mschimek@users.sf.net>
+
+	* test/preview.c: Restored.
+
 2001-12-11	<mschimek@users.sf.net>
 
 	* video/mpeg1.c: executed MC preparation despite the picture not being
